<resources>
    <string name="app_name">ImdbMoviApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">Sorry!, No internet connection found!</string>
    <string name="movies">Movies</string>
    <string name="search">search</string>
    <string name="movie_title">Movie Title</string>
    <string name="category">Category</string>
    <string name="score">Score</string>
    <string name="review">Review</string>
    <string name="popularity">Popularity</string>
    <string name="director">Director : </string>
    <string name="author">Author :</string>
    <string name="actor">Actor :</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="internal_server_error">Internal Server Error!</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="loading_failed">Unable to fetch data!</string>
    <string name="too_many_results">Too many results found!</string>

</resources>
