<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="item"
            type="com.example.imdbmoviapp.model.MovieDetailResponseModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/movieDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.view.DetailActivity">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:id="@+id/imgBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imgBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:id="@+id/labelMovieDetail"
            android:text="@string/movie_detail"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelMovieDetail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:id="@+id/posterLayout"
                    android:layout_margin="10dp"
                    android:background="@drawable/curved_bg_white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:setPosterImage="@{item.poster}" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/movieDetailTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@{item.title}"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imgPlay"
                    app:layout_constraintTop_toBottomOf="@+id/posterLayout" />

                <TextView
                    android:id="@+id/movieReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@{item.released}"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movieDetailTitle" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/imgPlay"
                    android:src="@drawable/ic_play"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/posterLayout"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="15dp"/>

                <View
                    android:layout_width="match_parent"
                    android:background="@color/grey"
                    android:id="@+id/layoutOne"
                    app:layout_constraintTop_toBottomOf="@+id/movieReleaseDate"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="0.5dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/ratingLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutOne">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="150dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:id="@+id/txtCategory"
                        android:text="@{item.genre}"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginStart="10dp"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtDuration"
                        android:text="@{item.runtime}"
                        android:textColor="@color/colorPrimary"
                        android:layout_centerHorizontal="true" />

                    <ImageView
                        android:id="@+id/imgRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/txtRating"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/star" />

                    <TextView
                        android:id="@+id/txtRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@{item.imdbRating}"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>


                <TextView
                    android:id="@+id/txtSynopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@{item.plot}"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="start"
                    app:layout_constraintTop_toBottomOf="@+id/ratingLayout"
                    app:layout_constraintBottom_toTopOf="@+id/reviewLayout"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:id="@+id/reviewLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSynopsis"
                    app:layout_constraintBottom_toTopOf="@+id/layoutTwo">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_alignParentStart="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/labelScore"
                            android:text="@string/score"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@{item.imdbRating}"
                            android:id="@+id/txtScore"
                            android:layout_below="@+id/labelScore"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/labelReview"
                            android:text="@string/review"
                            android:textColor="@color/colorPrimary"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/labelReview"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/txtReview"
                            android:text="@{item.imdbVotes}"
                            android:textColor="@color/colorPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_alignParentEnd="true">

                        <TextView
                            android:id="@+id/labelPopularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popularity"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtPopularity"
                            android:text="@{item.metascore}"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/labelPopularity"/>

                    </RelativeLayout>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:background="@color/grey"
                    android:id="@+id/layoutTwo"
                    app:layout_constraintTop_toBottomOf="@+id/reviewLayout"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_height="0.5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/layoutDirector"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/layoutTwo">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/director"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@color/colorPrimary"
                        android:text="@{item.director}"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/layoutAuthor"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/layoutDirector">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/author"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textColor="@color/colorPrimary"
                        android:text="@{item.writer}"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/layoutActor"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/layoutAuthor">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/actor"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textColor="@color/colorPrimary"
                        android:text="@{item.actors}"/>


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>